crates/tyrano-syntax/tests/data/invalid/unterminated_iscript.ks
[iscript]
var a = 1;
